force-app/main/default/objects/Project_Proposal__c/fields/Project_Sub_type__c.field-meta.xml
<CustomField>
    <fullName>Project_Sub_type__c</fullName>
    <inlineHelpText>Type of engagement when successful (if different to the proposal type)</inlineHelpText>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Research Collaboration</fullName>
            </value>
            <value>
                <fullName>Research Consultancy</fullName>
            </value>
            <value>
                <fullName>Non-Research Consultancy</fullName>
            </value>
            <value>
                <fullName>Scholarship</fullName>
            </value>
            <value>
                <fullName>Commercialisation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>