force-app/main/default/objects/Project_Proposal__c/fields/Project_Summary__c.field-meta.xml
<CustomField>
    <fullName>Project_Summary__c</fullName>
    <inlineHelpText>A brief summary of the project</inlineHelpText>
    <label>Project Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>