force-app/main/default/objects/Project_Proposal__c/fields/Publishing_Rights__c.field-meta.xml
<CustomField>
    <fullName>Publishing_Rights__c</fullName>
    <description>If removing dependency on IP Position, please verify this field is still visible in the &apos;Create Budget&apos; flow</description>
    <inlineHelpText>Nominate your preferred position for publishing project results. This may or may not involve approval from the other party. This may be updated once the Agreement has been finalised.</inlineHelpText>
    <label>Publishing Rights for Budgeting Purposes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Without Approval</fullName>
            </value>
            <value>
                <fullName>With Approval</fullName>
            </value>
            <value>
                <fullName>No Rights</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>