force-app/main/default/objects/Project_Proposal__c/fields/Reason_For_Not_Progressing__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Not_Progressing__c</fullName>
    <label>Reason For Not Progressing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pitch session feedback</fullName>
            </value>
            <value>
                <fullName>Review panel feedback</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
            <value>
                <fullName>School support not available</fullName>
            </value>
            <value>
                <fullName>Embargoed organisation</fullName>
            </value>
            <value>
                <fullName>Did not proceed</fullName>
            </value>
            <value>
                <fullName>Capped grant applications</fullName>
            </value>
            <value>
                <fullName>Not Awarded</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>