force-app/main/default/objects/Project_Proposal__c/fields/Recommendation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Reason__c</fullName>
    <label>Recommendation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>