force-app/main/default/objects/Project_Proposal__c/fields/Recommended_By__c.field-meta.xml
<CustomField>
    <fullName>Recommended_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recommended By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Proposals2</relationshipName>
    <type>Lookup</type>
</CustomField>