force-app/main/default/objects/Project_Proposal__c/fields/Related_Project_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Related_Project_Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Project Proposal</label>
    <referenceTo>Project_Proposal__c</referenceTo>
    <relationshipLabel>Project Proposals (Related)</relationshipLabel>
    <relationshipName>Project_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>