force-app/main/default/objects/Project_Proposal__c/fields/Research_at_hospital_health_service__c.field-meta.xml
<CustomField>
    <fullName>Research_at_hospital_health_service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Research at hospital/health service</label>
    <type>Checkbox</type>
</CustomField>