force-app/main/default/objects/Project_Proposal__c/fields/Research_Office_Contact__c.field-meta.xml
<CustomField>
    <fullName>Research_Office_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research Office Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Proposals3</relationshipName>
    <type>Lookup</type>
</CustomField>