force-app/main/default/objects/Project_Proposal__c/fields/Research_Office_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Research_Office_Contact_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research Office Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Proposals (Research Office Contact)</relationshipLabel>
    <relationshipName>Project_Proposals1</relationshipName>
    <type>Lookup</type>
</CustomField>