force-app/main/default/objects/Project_Proposal__c/fields/Research_Office_Notes__c.field-meta.xml
<CustomField>
    <fullName>Research_Office_Notes__c</fullName>
    <label>Research Portfolio Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>