force-app/main/default/objects/Project_Proposal__c/fields/Researcher_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Researcher_Declaration__c</fullName>
    <defaultValue>&quot;I, certify to the best of my knowledge that: &quot; &amp; br() &amp;
&quot;- All details in the attached proposal are true and correct and comply with relevant guidelines; &quot;&amp; br() &amp;
&quot;- If this proposal is successful, I will comply with the Australian Code for the Responsible Conduct of Research and agree that relevant University ethics, risk assessment and research contract procedures will be completed before this project commences. &quot;&amp; br() &amp;
&quot;- There is no conflict of interest in this proposal; &quot;&amp; br() &amp;
&quot;- All named team members agree to this proposal; &quot;&amp; br() &amp;
&quot;- All required documentation has been provided for approval. &quot;&amp; br()</defaultValue>
    <label>Researcher Declaration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>