force-app/main/default/objects/Project_Proposal__c/fields/Residency_Status_Comments__c.field-meta.xml
<CustomField>
    <fullName>Residency_Status_Comments__c</fullName>
    <label>Residency Status Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>