force-app/main/default/objects/Project_Proposal__c/fields/Second_Approver__c.field-meta.xml
<CustomField>
    <fullName>Second_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Proposals4</relationshipName>
    <type>Lookup</type>
</CustomField>