force-app/main/default/objects/Project_Proposal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PlaceHolder</fullName>
            </value>
            <value>
                <fullName>Create Proposal</fullName>
            </value>
            <value>
                <fullName>Proposal Review</fullName>
            </value>
            <value>
                <fullName>Recommended</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Create EOI</fullName>
            </value>
            <value>
                <fullName>Drafting NOI</fullName>
            </value>
            <value>
                <fullName>Final draft</fullName>
            </value>
            <value>
                <fullName>Initial Draft</fullName>
            </value>
            <value>
                <fullName>Provide Project Details</fullName>
            </value>
            <value>
                <fullName>Contract Instructions</fullName>
            </value>
            <value>
                <fullName>Review by Research Office</fullName>
            </value>
            <value>
                <fullName>Panel Review</fullName>
            </value>
            <value>
                <fullName>HoS NOI Validation</fullName>
            </value>
            <value>
                <fullName>Pitch Session</fullName>
            </value>
            <value>
                <fullName>Peer review draft</fullName>
            </value>
            <value>
                <fullName>Peer review draft complete</fullName>
            </value>
            <value>
                <fullName>Review Contract</fullName>
            </value>
            <value>
                <fullName>Draft contract</fullName>
            </value>
            <value>
                <fullName>Approvals</fullName>
            </value>
            <value>
                <fullName>Formalise Contract</fullName>
            </value>
            <value>
                <fullName>Submission to Client</fullName>
            </value>
            <value>
                <fullName>Negotiating</fullName>
            </value>
            <value>
                <fullName>Ready for Submission to Funding Body</fullName>
            </value>
            <value>
                <fullName>Submission to Funding Body</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Rejoinders</fullName>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Unsuccessful</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>