force-app/main/default/objects/Project_Proposal__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <inlineHelpText>The Funder’s due date for the proposal (if applicable).</inlineHelpText>
    <label>Submission Due Date</label>
    <type>Date</type>
</CustomField>