force-app/main/default/objects/Project_Proposal__c/fields/System_Field_Approval_Toggle__c.field-meta.xml
<CustomField>
    <fullName>System_Field_Approval_Toggle__c</fullName>
    <label>System Field Approval Toggle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>