force-app/main/default/objects/Project_Proposal__c/fields/Terms_of_Employment_Comments__c.field-meta.xml
<CustomField>
    <fullName>Terms_of_Employment_Comments__c</fullName>
    <label>Terms of Employment Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>