force-app/main/default/objects/Project_Proposal__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <inlineHelpText>Select which theme(s) this project aligns to.</inlineHelpText>
    <label>Theme Alignment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tropical ecosystems, conservation and climate change</fullName>
            </value>
            <value>
                <fullName>Industries and economies in the tropics</fullName>
            </value>
            <value>
                <fullName>People and societies in the tropics, and</fullName>
            </value>
            <value>
                <fullName>Tropical health, medicine and biosecurity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>