force-app/main/default/objects/Project_Proposal__c/fields/TRIM_File_Number__c.field-meta.xml
<CustomField>
    <fullName>TRIM_File_Number__c</fullName>
    <inlineHelpText>Corporate record number for this record</inlineHelpText>
    <label>TRIM File Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>