force-app/main/default/objects/Project_Proposal__c/fields/Update_Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>Update_Approver_Comments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Approver Comments</label>
    <type>Checkbox</type>
</CustomField>