force-app/main/default/objects/Project_Proposal__c/validationRules/Currency_should_not_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Currency_should_not_be_negative</fullName>
    <active>true</active>
    <description>Amount Values should not be negative</description>
    <errorConditionFormula>(Amount_Requested__c &lt; 0  ||  Awarded_Amount__c  &lt; 0)</errorConditionFormula>
    <errorMessage>Currency should not be negative</errorMessage>
</ValidationRule>