force-app/main/default/objects/Project_Proposal__c/validationRules/Project_End_Date_greater_than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_End_Date_greater_than_Start_Date</fullName>
    <active>true</active>
    <description>Project End Date can&apos;t be less than Project Start Date</description>
    <errorConditionFormula>Project_End_Date__c  &lt;  Project_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Project_End_Date__c</errorDisplayField>
    <errorMessage>Project End Date can&apos;t be less than Project Start Date</errorMessage>
</ValidationRule>