force-app/main/default/objects/Project_Proposal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project_Number__c</columns>
    <columns>LeadChiefInvestigator__c</columns>
    <columns>Status__c</columns>
    <columns>Research_Office_Contact__c</columns>
    <columns>Account_Organisation__c</columns>
    <columns>Project_Type__c</columns>
    <columns>Project_Sub_type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>