force-app/main/default/objects/Project_Proposal__c/listViews/Awaiting_Approvals.listView-meta.xml
<ListView>
    <fullName>Awaiting_Approvals</fullName>
    <columns>NAME</columns>
    <columns>Account_Organisation__c</columns>
    <columns>Funding_Opportunity__c</columns>
    <columns>Submission_Date__c</columns>
    <columns>Lead_Chief_Investigator__c</columns>
    <columns>First_Approver__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approvals</value>
    </filters>
    <label>02-Awaiting Approvals</label>
</ListView>